# public/openapi/openapi.json
@@ -1,8 +1,13 @@
 {
-    "openapi": "3.0.1",
+    "openapi": "3.1.0",
     "info": {
         "title": "Kitagerak API",
-        "summary": "Kitagerak API",
+        "summary": "OpenAPI for Kitagerak API",
+        "description": "Some part of the examples assumes database have been seedeed. Running migration and seeder first is recommended, run `php aritsan migrate --seed` or `sail artisan migrate --seed` if you are developing with sail.",
+        "contact": {
+            "name": "Kenneth Manuel (API Maintainer)",
+            "email": "kennethlieyanto99@gmail.com"
+        },
         "version": "1.0"
     },
     "servers": [
@@ -56,11 +61,45 @@
                                 },
                                 "Email already exist": {
                                     "value": {
-                                        "name": "John Wick",
+                                        "name": "test",
                                         "email": "johndoe@johndoe.com",
-                                        "phone_number": "0811111111",
-                                        "password": "secretjohnwick",
+                                        "phone_number": "11111111111",
+                                        "password": "test",
                                         "national_id_number": "1111111111111111"
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/venue_owners/login": {
+            "post": {
+                "summary": "Login venue owner",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "examples": {
+                                "Successful Login": {
+                                    "value": {
+                                        "email": "test@test.com",
+                                        "password": "test"
                                     }
                                 }
                             }
